@@ -6,7 +6,7 @@ Task::BeLike::LESPEA - Modules that LESPEA uses on a daily basis
 
 =head1 VERSION
 
-version 2.003000
+version 2.004000
 
 =encoding utf8
 
@@ -23,10 +23,6 @@ Modern XLSX writer
 =item L<Spreadsheet::ParseExcel|Spreadsheet::ParseExcel>
 
 Read Microsoft xls files
-
-=item L<Spreadsheet::Read|Spreadsheet::Read>
-
-Write a wide variety of 'spreadsheets'
 
 =item L<Spreadsheet::WriteExcel|Spreadsheet::WriteExcel>
 
