@@ -2,7 +2,7 @@
 name    = Task-BeLike-LESPEA
 author  = Adam Lesperance <lespea@gmail.com>
 license = Perl_5
-version = 2.003000
+version = 2.004000
 
 copyright_holder = Adam Lesperance
 copyright_year   = 2012
@@ -167,7 +167,6 @@ Readonly::XS = 0.000000
 Regexp::Common = 0.000000
 Scalar::Util = 0.000000
 Spreadsheet::ParseExcel = 0.000000
-Spreadsheet::Read = 0.000000
 Spreadsheet::WriteExcel = 0.000000
 Spreadsheet::XLSX = 0.000000
 Task::Weaken = 0.000000
