@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    *   Remove Spreadsheet::Read as it's breaking installs
+
 
 2.003000  2012-09-05 01:17:20 America/Chicago
     *   Include a few more modules
